--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -76,7 +76,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="My Accounts (History)"
+                    android:text="My Accounts"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textColor="@color/textColorWhite"/>
