--- a/app/src/main/res/layout/transaction_details_custom_layout.xml
+++ b/app/src/main/res/layout/transaction_details_custom_layout.xml
@@ -182,7 +182,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Chip"
+                android:text="Chips"
                 android:textColor="@color/textColor"
                 android:gravity="center"/>
         </LinearLayout>
