--- a/app/src/main/res/layout/fragment_single__bet.xml
+++ b/app/src/main/res/layout/fragment_single__bet.xml
@@ -179,15 +179,32 @@
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
-                                   android:weightSum="2">
+                                   android:weightSum="4">
+                                   <TextView
+                                       android:layout_width="0dp"
+                                       android:layout_height="wrap_content"
+                                       android:hint="Chips:"
+                                       android:gravity="center_horizontal"
+                                       android:textColor="@color/textColor"
+                                       android:layout_gravity="left"
+                                       android:layout_weight="0.7"
+                                       />
+                                   <TextView
+                                       android:id="@+id/first_bet_ttl"
+                                       android:layout_width="0dp"
+                                       android:layout_height="wrap_content"
+                                       android:hint="00"
+                                       android:paddingLeft="5dp"
+                                       android:textColor="@color/textColor"
+                                       android:layout_weight="1.2"/>
                                 <TextView
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:hint="Return Chips:"
-                                    android:gravity="right"
+                                    android:gravity="center_horizontal"
                                     android:textColor="@color/textColor"
-                                    android:layout_gravity="center"
-                                    android:layout_weight="1"
+                                    android:layout_gravity="right"
+                                    android:layout_weight="1.3"
                                     />
                                 <TextView
                                     android:id="@+id/first_return_amount"
@@ -196,7 +213,7 @@
                                     android:hint="00"
                                     android:paddingLeft="5dp"
                                     android:textColor="@color/textColor"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="0.8"/>
                                </LinearLayout>
                             </LinearLayout>
                 </LinearLayout>
@@ -295,15 +312,33 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:weightSum="2">
+                        android:weightSum="4">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:hint="Chips:"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/textColor"
+                            android:layout_gravity="center"
+                            android:layout_weight="0.7"
+                            />
+                        <TextView
+                            android:id="@+id/second_bets_ttl"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:hint="00"
+                            android:paddingLeft="5dp"
+                            android:textColor="@color/textColor"
+                            android:layout_gravity="center"
+                            android:layout_weight="1.2"/>
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:hint="Return Chips:"
-                            android:gravity="right"
+                            android:gravity="center_horizontal"
                             android:textColor="@color/textColor"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
+                            android:layout_weight="1.3"
                             />
                     <TextView
                         android:id="@+id/return_second_amount"
@@ -313,7 +348,7 @@
                         android:paddingLeft="5dp"
                         android:textColor="@color/textColor"
                         android:layout_gravity="center"
-                        android:layout_weight="1"/>
+                        android:layout_weight="0.8"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -412,7 +447,25 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:weightSum="2">
+                        android:weightSum="4">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:hint="Chips:"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/textColor"
+                            android:layout_gravity="center"
+                            android:layout_weight="0.7"
+                            />
+                        <TextView
+                            android:id="@+id/jodi_bets_ttl"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.2"
+                            android:hint="00"
+                            android:paddingLeft="5dp"
+                            android:textColor="@color/textColor"
+                            android:layout_gravity="center"/>
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -420,13 +473,13 @@
                             android:gravity="right"
                             android:textColor="@color/textColor"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
+                            android:layout_weight="1.3"
                             />
                     <TextView
                         android:id="@+id/return_jodi_amount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.8"
                         android:hint="00"
                         android:paddingLeft="5dp"
                         android:textColor="@color/textColor"
