--- a/app/src/main/res/layout/fragment_todays_summary.xml
+++ b/app/src/main/res/layout/fragment_todays_summary.xml
@@ -53,7 +53,7 @@
             android:layout_weight="1"
             android:textColor="@color/textColor"
             android:paddingLeft="5dp"
-            android:text="Trans. Amount"/>
+            android:text="Trans. Chips"/>
 
         <View
             android:layout_width="0dp"
