--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -4,36 +4,36 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/dash_board"
-            android:icon="@android:drawable/ic_menu_camera"
+            android:icon="@android:drawable/ic_menu_manage"
             android:title="Home" />
         <item
             android:id="@+id/chart"
-            android:icon="@android:drawable/ic_menu_camera"
+            android:icon="@android:drawable/ic_menu_info_details"
             android:title="Chart" />
         <item
             android:id="@+id/today_summary"
-            android:icon="@android:drawable/ic_menu_gallery"
+            android:icon="@android:drawable/ic_menu_today"
             android:title="Today's Summary" />
         <item
             android:id="@+id/today_history"
-            android:icon="@android:drawable/ic_menu_gallery"
+            android:icon="@android:drawable/ic_menu_recent_history"
             android:title="History" />
         <item
             android:id="@+id/cancel_bet"
-            android:icon="@android:drawable/ic_menu_slideshow"
+            android:icon="@android:drawable/ic_menu_close_clear_cancel"
             android:title="Cancel Bet" />
         <item
             android:id="@+id/limit"
-            android:icon="@android:drawable/ic_menu_manage"
+            android:icon="@android:drawable/ic_menu_agenda"
             android:title="Limit" />
 
         <item
             android:id="@+id/multiple_bet"
-            android:icon="@android:drawable/ic_menu_manage"
+            android:icon="@android:drawable/ic_menu_preferences"
             android:title="Multiple Bet" />
         <item
             android:id="@+id/profile"
-            android:icon="@android:drawable/ic_menu_manage"
+            android:icon="@android:drawable/ic_menu_view"
             android:title="Profile" />
         <item
             android:id="@+id/terms"
@@ -41,7 +41,7 @@
             android:title="Term and Condition" />
         <item
             android:id="@+id/logout"
-            android:icon="@android:drawable/ic_menu_manage"
+            android:icon="@android:drawable/ic_menu_zoom"
             android:title="Logout" />
     </group>
 
