--- a/app/src/main/res/layout/content_result_chart.xml
+++ b/app/src/main/res/layout/content_result_chart.xml
@@ -26,7 +26,7 @@
         <TextView
             android:id="@+id/text_view1"
             android:layout_width="match_parent"
-            android:layout_height="34dp"
+            android:layout_height="35dp"
             android:text="Time"
             android:textColor="@color/textColor"
             android:singleLine="true"
@@ -49,7 +49,7 @@
             <TextView
                 android:id="@+id/te2"
                 android:layout_width="match_parent"
-                android:layout_height="19dp"
+                android:layout_height="20dp"
                 android:text="00.30"
                 android:gravity="center"
                 android:textColor="@color/textColor"/>
@@ -60,7 +60,7 @@
             <TextView
                 android:id="@+id/te3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:text="00.45"
                 android:gravity="center"
                 android:textColor="@color/textColor"/>
@@ -71,7 +71,7 @@
             <TextView
                 android:id="@+id/te4"
                 android:layout_width="match_parent"
-                android:layout_height="19dp"
+                android:layout_height="20dp"
                 android:text="1.00"
                 android:gravity="center"
                 android:textColor="@color/textColor"/>
@@ -1113,7 +1113,7 @@
             <TableRow
                 android:id="@+id/tableRow11"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:showDividers="beginning|end"
                 android:divider="@android:color/darker_gray">
 
