--- a/app/src/main/res/layout/content_result_chart.xml
+++ b/app/src/main/res/layout/content_result_chart.xml
@@ -27,6 +27,7 @@
             android:id="@+id/text_view1"
             android:layout_width="match_parent"
             android:layout_height="35dp"
+            android:layout_weight="1"
             android:text="Time"
             android:textColor="@color/textColor"
             android:singleLine="true"
