--- a/app/src/main/res/layout/fragment_previous_game_result.xml
+++ b/app/src/main/res/layout/fragment_previous_game_result.xml
@@ -83,6 +83,7 @@
             android:layout_height="0.1dp"
             android:background="@color/textColor"/>
         <ListView
+            android:id="@+id/listPrevious"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"></ListView>
