--- a/app/src/main/res/layout/fragment_single__bet.xml
+++ b/app/src/main/res/layout/fragment_single__bet.xml
@@ -37,7 +37,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:text="Current Draw:03:30 pm"
+                android:text="Current Draw:"
                 android:textColor="@color/textColor"
                 android:textSize="15sp"
                 android:paddingLeft="5dp"
