--- a/app/src/main/res/layout/fragment_upcoming_matches.xml
+++ b/app/src/main/res/layout/fragment_upcoming_matches.xml
@@ -1,71 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="bidding.example.com.bidding.UpcomingMatches">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+
+    <com.squareup.timessquare.CalendarPickerView
+        android:id="@+id/upcomingCalendar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-    <TextView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Match Details" />
+        />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="@color/textColor"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="Play"
-            android:id="@+id/btn_play" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="Later Today"
-            android:id="@+id/btn_today" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="Tomorrow"
-            android:id="@+id/btn_tmrw" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="Next 8 Days"
-        android:id="@+id/btn_next"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="@color/textColor"
-            android:layout_marginTop="20dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center_horizontal"
-        android:text="Cricket Calendar"
-        android:id="@+id/button2"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="@color/textColor"
-            android:layout_marginTop="5dp"/>
-
-    <CalendarView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/calendarView"
-        android:layout_gravity="left|bottom" />
-    </LinearLayout>
 </FrameLayout>
