--- a/app/src/main/res/menu/custom_menu.xml
+++ b/app/src/main/res/menu/custom_menu.xml
@@ -12,5 +12,6 @@
         android:id="@+id/game_2"
         android:orderInCategory="100"
         android:title="@string/Cricket"
+        android:icon="@drawable/cricket2"
         app:showAsAction="always" />
 </menu>
