--- a/app/src/main/res/menu/acitivty_mainpage_drawer.xml
+++ b/app/src/main/res/menu/acitivty_mainpage_drawer.xml
@@ -21,11 +21,11 @@
         <item
             android:id="@+id/previous_result"
             android:icon="@android:drawable/ic_menu_slideshow"
-            android:title="Previous Game Results" />
+            android:title="Results" />
         <item
             android:id="@+id/upcoming_matches"
             android:icon="@android:drawable/ic_menu_manage"
-            android:title="Upcoming Matches" />
+            android:title="Matches" />
 
         <item
             android:id="@+id/cancel_bet"
