--- a/app/src/main/res/layout/content_notification_.xml
+++ b/app/src/main/res/layout/content_notification_.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lucky Number for timeslot:"
+        android:text="Lucky Number for "
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:gravity="center" />
@@ -29,13 +29,6 @@
         android:hint="timeslot"
         android:layout_marginTop="25dp"
         android:gravity="center"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="is"
-        android:id="@+id/textView5"
-        android:layout_marginTop="50dp"
-        android:gravity="center"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -44,7 +37,7 @@
         android:text=""
         android:hint="lucky no."
         android:id="@+id/txtluckyno"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:gravity="center"/>
 
 
