--- a/app/src/main/res/layout/fragment_cricket_dashboard.xml
+++ b/app/src/main/res/layout/fragment_cricket_dashboard.xml
@@ -3,7 +3,6 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/crckt_bck"
     tools:context="bidding.example.com.bidding.Cricket_Home"
     android:padding="@dimen/abc_action_bar_content_inset_material"  >
 
@@ -95,7 +94,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Previous Game Results"
+                    android:text="Results"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textColor="@color/textColorWhite"/>
@@ -121,7 +120,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Upcoming Matches"
+                    android:text="Matches"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textColor="@color/textColorWhite"/>
