--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -7,17 +7,23 @@
             android:icon="@android:drawable/ic_menu_manage"
             android:title="Home" />
         <item
-            android:id="@+id/chart"
-            android:icon="@android:drawable/ic_menu_info_details"
-            android:title="Chart" />
+            android:id="@+id/multiple_bet"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="Multiple Bet" />
+
+        <item
+            android:id="@+id/today_history"
+            android:icon="@android:drawable/ic_menu_recent_history"
+            android:title="My Accounts" />
         <item
             android:id="@+id/today_summary"
             android:icon="@android:drawable/ic_menu_today"
             android:title="Today's Summary" />
+
         <item
-            android:id="@+id/today_history"
-            android:icon="@android:drawable/ic_menu_recent_history"
-            android:title="History" />
+            android:id="@+id/chart"
+            android:icon="@android:drawable/ic_menu_info_details"
+            android:title="Chart" />
         <item
             android:id="@+id/cancel_bet"
             android:icon="@android:drawable/ic_menu_close_clear_cancel"
@@ -27,10 +33,6 @@
             android:icon="@android:drawable/ic_menu_agenda"
             android:title="Limit" />
 
-        <item
-            android:id="@+id/multiple_bet"
-            android:icon="@android:drawable/ic_menu_preferences"
-            android:title="Multiple Bet" />
         <item
             android:id="@+id/profile"
             android:icon="@android:drawable/ic_menu_view"
