--- a/app/src/main/res/layout/content_screen_slide.xml
+++ b/app/src/main/res/layout/content_screen_slide.xml
@@ -11,7 +11,15 @@
 
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
+
+    <com.viewpagerindicator.CirclePageIndicator
+        android:id="@+id/mc_cpi"
+        android:layout_alignParentBottom="true"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+      />
+
 
 </RelativeLayout>
