--- a/app/src/main/res/layout/content_play_details.xml
+++ b/app/src/main/res/layout/content_play_details.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="12:10"
-            android:id="@+id/textView11"/>
+            android:id="@+id/txtstart"/>
 
         <View
             android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             android:layout_gravity="center_horizontal"
             android:textSize="16sp"
             android:text="120/2"
-            android:id="@+id/textView12" />
+            android:id="@+id/txtScore" />
 
         <TextView
             android:layout_width="wrap_content"
