--- a/app/src/main/res/layout/fragment_todays_history.xml
+++ b/app/src/main/res/layout/fragment_todays_history.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="bidding.example.com.bidding.TodaysHistory"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.1"
         android:weightSum="4"
         android:orientation="horizontal"
         android:id="@+id/topLayout">
@@ -66,6 +68,7 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.8"
         android:layout_below="@+id/view"
         android:layout_above="@+id/view2"/>
 
@@ -78,6 +81,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.1"
         android:weightSum="3"
         android:orientation="horizontal"
         android:id="@+id/bottomLayout">
@@ -115,7 +119,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Profit/Loss Weekly"
+            android:text="P/L Weekly"
             android:textColor="@color/textColor"
             android:id="@+id/textView16" />
         <View
@@ -134,6 +138,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.1"
         android:weightSum="3"
         android:orientation="horizontal"
         android:id="@+id/bottomLayout1"
