--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/side_nav_bar"
+    android:background="@drawable/mb_bg_fb"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
