--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
+    android:background="@drawable/time_is_money"
     android:descendantFocusability="beforeDescendants"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_login"
@@ -21,7 +22,6 @@
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:paddingRight="15dp"
-        android:background="@drawable/card_background"
         android:descendantFocusability="afterDescendants"
         android:layout_marginTop="@dimen/dashboard_menu"
         >
@@ -29,21 +29,25 @@
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_user_name"
                android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+               android:layout_height="wrap_content"
+               app:hintTextAppearance="@style/TextLabel">
                 <EditText
                     android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="#fff"
                     android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:hintTextAppearance="@style/TextLabel">
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="#fff"
                     android:inputType="textPassword"
                     android:singleLine="true"
                     />
