--- a/app/src/main/res/layout/content_play_details.xml
+++ b/app/src/main/res/layout/content_play_details.xml
@@ -35,19 +35,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_gravity="center_horizontal"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:text="120/2"
             android:id="@+id/txtScore" />
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:textSize="16sp"
-            android:text="Mumbai V/s Pune"
-            android:id="@+id/txtlive"
-            android:textColor="#42bcf4"/>
+            android:text="Overs"
+            android:id="@+id/txtOver"/>
 
         <View
             android:layout_width="match_parent"
@@ -60,21 +58,15 @@
             android:layout_marginTop="5dp"
             android:weightSum="2">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:text="12.15"
-            android:id="@+id/textView14"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:layout_gravity="right"
-            android:text="04.30"
-            android:id="@+id/textView15"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:textSize="16sp"
+                android:text=""
+                android:id="@+id/txtlive"
+                android:textColor="#42bcf4"/>
 
         </LinearLayout>
         <View
@@ -85,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="MUMBAI V/s PUNE"
+            android:text=""
             android:id="@+id/txtheading"
             android:layout_gravity="center_horizontal" />
         <View
@@ -93,130 +85,16 @@
             android:layout_height="0.1dp"
             android:background="@color/textColor"/>
 
-  <!--  <android.support.v7.widget.CardView
-        android:id="@+id/live_match"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/abc_action_bar_stacked_tab_max_width"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="2dp"
-        card_view:cardUseCompatPadding="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        tools:ignore="NewApi">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.89"
-                android:text="MUMBAI"
-                android:id="@+id/textView20" />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_odd1"
-                android:hint="100"
-                android:layout_weight="1" />
-            </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.89"
-                android:text="PUNE"
-                android:id="@+id/textView17" />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_odd2"
-                android:hint="80"
-                android:layout_weight="1" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-        </android.support.v7.widget.CardView>-->
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/toss"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/abc_action_bar_stacked_tab_max_width"
-            card_view:cardCornerRadius="4dp"
-            card_view:cardElevation="2dp"
-            card_view:cardUseCompatPadding="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            tools:ignore="NewApi">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="15dp"
-                    android:weightSum="2">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.4"
-                        android:text="TOSS"
-                        android:id="@+id/textView22" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.89"
-                        android:text="MUMBAI"
-                        android:id="@+id/textView23" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.89"
-                        android:text="PUNE"
-                        android:id="@+id/textView24" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
 
     </LinearLayout>
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listDetail"
-            android:layout_centerHorizontal="true"
-            android:background="#fff"
-            android:layout_above="@+id/btn_more"
-            android:layout_below="@+id/linearLayout"/>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listDetail"
+        android:layout_centerHorizontal="true"
+        android:background="#fff"
+        android:layout_above="@+id/btn_more"
+        android:layout_below="@+id/linearLayout"/>
 
 
     <ImageButton
@@ -240,28 +118,28 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/cncl"
-            android:src="@android:drawable/ic_delete"
-            android:layout_alignParentRight="true" />
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/cncl"
+                android:src="@android:drawable/ic_delete"
+                android:layout_alignParentRight="true" />
 
-        <RelativeLayout
-            android:id="@+id/list_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/cncl">
+            <RelativeLayout
+                android:id="@+id/list_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cncl">
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/listGames"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:background="#888888"/>
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/listGames"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="#888888"/>
 
+            </RelativeLayout>
         </RelativeLayout>
-        </RelativeLayout>
-        </bidding.example.com.bidding.SlidingPanel>
+    </bidding.example.com.bidding.SlidingPanel>
 </RelativeLayout>
