--- a/app/src/main/res/layout/content_match_details.xml
+++ b/app/src/main/res/layout/content_match_details.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="#dedede"
     tools:showIn="@layout/activity_match_details"
     tools:context="bidding.example.com.bidding.Cricket_Game.Match_details">
     <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
