--- a/app/src/main/res/layout/content_more_games.xml
+++ b/app/src/main/res/layout/content_more_games.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#dedede"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="bidding.example.com.bidding.MoreGames"
     tools:showIn="@layout/activity_more_games">
