--- a/app/src/main/res/layout/content_play_details.xml
+++ b/app/src/main/res/layout/content_play_details.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingTop="10dp"
+    android:background="#dedede"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_play_details">
