--- a/app/src/main/res/layout/content_result_chart.xml
+++ b/app/src/main/res/layout/content_result_chart.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_result_chart"
+    android:background="#dedede"
     tools:context="bidding.example.com.bidding.ResultChart.result_chart">
     <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
 
