--- a/app/src/main/res/layout/content_tansaction_wise_history.xml
+++ b/app/src/main/res/layout/content_tansaction_wise_history.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#dedede"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_tansaction_wise_history"
     tools:context="bidding.example.com.bidding.TansactionWiseHistory">
