--- a/app/src/main/res/layout/fragment_cricket_dashboard.xml
+++ b/app/src/main/res/layout/fragment_cricket_dashboard.xml
@@ -16,7 +16,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/bet"
@@ -62,7 +63,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/accounts"
@@ -106,7 +108,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/upcoming"
@@ -149,7 +152,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff">
 
 
             <android.support.v7.widget.CardView
