--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -16,7 +16,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/single_bet_card"
@@ -62,7 +63,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/todays_history_card"
@@ -107,7 +109,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/chart_card"
@@ -152,7 +155,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#fff">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/termcondition"
