--- a/app/src/main/res/layout/fragment_previous_game_result.xml
+++ b/app/src/main/res/layout/fragment_previous_game_result.xml
@@ -1,7 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="bidding.example.com.bidding.PreviousGameREsult">
+    tools:context="bidding.example.com.bidding.PreviousGameREsult"
+    android:background="#dedede">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
