--- a/app/src/main/res/layout/fragment_single__bet.xml
+++ b/app/src/main/res/layout/fragment_single__bet.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="bidding.example.com.bidding.Lottery_Game.Single_Bet"
     android:orientation="vertical"
-    >
+    android:background="#dedede">
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view1"
