--- a/app/src/main/res/layout/fragment_term_and_condition.xml
+++ b/app/src/main/res/layout/fragment_term_and_condition.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#dedede"
     tools:context="bidding.example.com.bidding.TermAndCondition">
 
     <!-- TODO: Update blank fragment layout -->
